updated index file

--- a/personal.html
+++ b/personal.html
@@ -72,7 +72,8 @@
         </section>
 
         <section id="MyWork">
-            <div class="details-container color-container">
+            <h1 class="title">MY WORK</h1>
+            <div class="details-container">
                 <div class="article-container">
                     <img src="./assets/pdf.png" alt="Project 1" class="project-img" />
                 </div>
@@ -84,7 +85,7 @@
                     </button>
                 </div>
             </div>
-            <div class="details-container color-container">
+            <div class="details-container">
                 <div class="article-container">
                     <img src="./assets/pdf.png" alt="Project 1" class="project-img" />
                 </div>
@@ -96,7 +97,7 @@
                     </button>
                 </div>
             </div>
-            <div class="details-container color-container">
+            <div class="details-container">
                 <div class="article-container">
                   <img src="./assets/ipynb.png" alt="Project 2" class="project-img" />
                 </div>
@@ -108,7 +109,7 @@
                   </button>
                 </div>
             </div>
-            <div class="details-container color-container">
+            <div class="details-container">
                 <div class="article-container">
                   <img src="./assets/online.png" alt="Project 2" class="project-img" />
                 </div>
@@ -127,14 +128,7 @@
             <div class="about-content">
                 <div class="about-text">
                     <h3>My Skills</h3>
-                    <ul>
-                        <li>Web Development & Design</li>
-                        <li>Technical Writing</li>
-                        <li>Data Visualization</li>
-                        <li>Data Science</li>
-                        <li>Data Analysis</li>
-                        <li>Database Management</li>
-                    </ul>
+                    
                 </div>
             </div>
             <div class="skills-grid">
