--- a/personal.html
+++ b/personal.html
@@ -72,7 +72,7 @@
         </section>
 
         <section id="MyWork">
-            <h1 class="title">MY WORK</h1>
+            <h1 class="title">My work</h1>
             <div class="details-container">
                 <div class="article-container">
                     <img src="./assets/pdf.png" alt="Project 1" class="project-img" />
@@ -124,15 +124,66 @@
         </section>
 
         <section id="skills">
-            <h2>Skills</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <h3>My Skills</h3>
-                    
+                    <h2>My Skills</h2>
+                </div>
+            <article>
+                <img src="assets/checkmark.png" alt="Experience icon" class="icon">
+                <div>
+                    <p>Web Development and Design</p>
+                </div>
+            </article>
+            <article>
+                <img src="assets/checkmark.png" alt="Experience icon" class="icon">
+                <div>
+                    <p>Technical Writing</p>
+                </div>
+            </article>
+            <article>
+                <img src="assets/checkmark.png" alt="Experience icon" class="icon">
+                <div>
+                    <p>Data Visualization</p>
+                </div>
+            </article>
+            <article>
+                <img src="assets/checkmark.png" alt="Experience icon" class="icon">
+                <div>
+                    <p>Data Science</p>
+                </div>
+            </article>
+            <article>
+                <img src="assets/checkmark.png" alt="Experience icon" class="icon">
+                <div>
+                    <p>Data Analysis</p>
+                </div>
+            </article>
+            <article>
+                <img src="assets/checkmark.png" alt="Experience icon" class="icon">
+                <div>
+                    <p>Database Management</p>
+                </div>
+            </article>
+            <div class="skills-grid-container">    
+                <div class="skills-grid">
+                    <img src="assets/html.png" alt="Experience icon" class="icon">
+                </div>
+                <div class="skills-grid">
+                    <img src="assets/css.png" alt="Experience icon" class="icon">
+                </div>
+                <div class="skills-grid">
+                    <img src="assets/php.png" alt="Experience icon" class="icon">
+                </div>
+                <div class="skills-grid">
+                    <img src="assets/js.png" alt="Experience icon" class="icon">
+                </div>
+                <div class="skills-grid">
+                    <img src="assets/python.jpeg" alt="Experience icon" class="icon">
+                </div>
+                <div class="skills-grid">
+                    <img src="assets/R.jpeg" alt="Experience icon" class="icon">
                 </div>
             </div>
-            <div class="skills-grid">
-                <!-- Add skill icons here -->
             </div>
         </section>
 
