--- a/personal.html
+++ b/personal.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#skills">My Skills</a></li>
-                <li><a href="#work">Work</a></li>
+                <li><a href="#MyWork">Work</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -122,48 +122,38 @@
             </div>
 
         </section>
-
+        <hr>
         <section id="skills">
             <div class="about-content">
                 <div class="about-text">
                     <h2>My Skills</h2>
                 </div>
-            <article>
-                <img src="assets/checkmark.png" alt="Experience icon" class="icon">
-                <div>
-                    <p>Web Development and Design</p>
+                <div class="skills-container">
+                    <div class="skill-item">
+                        <img src="assets/checkmark.png" alt="Experience icon" class="icon">
+                        <p>Web Development and Design</p>
+                    </div>
+                    <div class="skill-item">
+                        <img src="assets/checkmark.png" alt="Experience icon" class="icon">
+                        <p>Technical Writing</p>
+                    </div>
+                    <div class="skill-item">
+                        <img src="assets/checkmark.png" alt="Experience icon" class="icon">
+                        <p>Data Visualization</p>
+                    </div>
+                    <div class="skill-item">
+                        <img src="assets/checkmark.png" alt="Experience icon" class="icon">
+                        <p>Data Science</p>
+                    </div>
+                    <div class="skill-item">
+                        <img src="assets/checkmark.png" alt="Experience icon" class="icon">
+                        <p>Data Analysis</p>
+                    </div>
+                    <div class="skill-item">
+                        <img src="assets/checkmark.png" alt="Experience icon" class="icon">
+                        <p>Database Management</p>
+                    </div>
                 </div>
-            </article>
-            <article>
-                <img src="assets/checkmark.png" alt="Experience icon" class="icon">
-                <div>
-                    <p>Technical Writing</p>
-                </div>
-            </article>
-            <article>
-                <img src="assets/checkmark.png" alt="Experience icon" class="icon">
-                <div>
-                    <p>Data Visualization</p>
-                </div>
-            </article>
-            <article>
-                <img src="assets/checkmark.png" alt="Experience icon" class="icon">
-                <div>
-                    <p>Data Science</p>
-                </div>
-            </article>
-            <article>
-                <img src="assets/checkmark.png" alt="Experience icon" class="icon">
-                <div>
-                    <p>Data Analysis</p>
-                </div>
-            </article>
-            <article>
-                <img src="assets/checkmark.png" alt="Experience icon" class="icon">
-                <div>
-                    <p>Database Management</p>
-                </div>
-            </article>
             <div class="skills-grid-container">    
                 <div class="skills-grid">
                     <img src="assets/html.png" alt="Experience icon" class="icon">
@@ -186,9 +176,60 @@
             </div>
             </div>
         </section>
-
-        <!-- Add more sections as needed -->
-
+        <section id="contact">
+            <h1 class="title">Contact Me</h1>
+            <div class="container">
+                <div class="contact-info">
+                    <h2>Contact Information</h2>
+                    <p>Location: Nyeri, Kenya</p>
+                    <p>Email: chabariedwin111@gmail.com</p>
+                    <p>Phone: (+254) 113308744</p>
+                </div>
+                <div class="contact-form">
+                    <h2>Reach Out!</h2>
+                    <form id="my-form" action="https://formspree.io/f/xeojkego" method="POST">
+                        <label>Email:</label>
+                        <input type="email" name="email" />
+                        <label>Message:</label>
+                        <input type="text" name="message" />
+                        <button id="my-form-button">Submit</button>
+                        <p id="my-form-status"></p>
+                      </form>
+                </div>
+            </div>
+            <script>
+                var form = document.getElementById("my-form");
+                
+                async function handleSubmit(event) {
+                  event.preventDefault();
+                  var status = document.getElementById("my-form-status");
+                  var data = new FormData(event.target);
+                  fetch(event.target.action, {
+                    method: form.method,
+                    body: data,
+                    headers: {
+                        'Accept': 'application/json'
+                    }
+                  }).then(response => {
+                    if (response.ok) {
+                      status.innerHTML = "Thanks for your submission!";
+                      form.reset()
+                    } else {
+                      response.json().then(data => {
+                        if (Object.hasOwn(data, 'errors')) {
+                          status.innerHTML = data["errors"].map(error => error["message"]).join(", ")
+                        } else {
+                          status.innerHTML = "Oops! There was a problem submitting your form"
+                        }
+                      })
+                    }
+                  }).catch(error => {
+                    status.innerHTML = "Oops! There was a problem submitting your form"
+                  });
+                }
+                form.addEventListener("submit", handleSubmit)
+              </script>
+        </section>
     </main>
 
     <footer>
